Fixed a bug which would cause theme changes to be only partly displayed on mobile

--- a/sudoku-new/css/main.less
+++ b/sudoku-new/css/main.less
@@ -442,31 +442,29 @@ html.light {
         }
     }
 
-    &.desktop {
-        .screen {
-            .menu {
-                li {
-                    .menuItem {
-                        background-color: rgba(43, 47, 51, 0.5);
-                        &.selected {
-                            color: #2b2f33;
-                            background-color: rgba(43, 47, 51, 0.3);
+    .screen {
+        .menu {
+            li {
+                .menuItem {
+                    background-color: rgba(43, 47, 51, 0.5);
+                    &.selected {
+                        color: #2b2f33;
+                        background-color: rgba(43, 47, 51, 0.3);
 
-                            &:before {
-                                border-left-color: #2b2f33;
-                            }
-                            &:after {
-                                border-right-color: #2b2f33;
-                            }
+                        &:before {
+                            border-left-color: #2b2f33;
+                        }
+                        &:after {
+                            border-right-color: #2b2f33;
                         }
                     }
-                    .leftArrow {
-                        border-right-color: #2b2f33;
-                    }
+                }
+                .leftArrow {
+                    border-right-color: #2b2f33;
+                }
 
-                    .rightArrow {
-                        border-left-color: #2b2f33;
-                    }
+                .rightArrow {
+                    border-left-color: #2b2f33;
                 }
             }
         }
@@ -489,21 +487,19 @@ html.dark {
         background: #fcfcfc;
     }
 
-    &.desktop {
-        .screen {
-            .menu {
-                li {
-                    .menuItem {
-                        &.selected {
-                            color: #2b2f33;
-                            background-color: rgba(255, 255, 255, 0.6);
+    .screen {
+        .menu {
+            li {
+                .menuItem {
+                    &.selected {
+                        color: #2b2f33;
+                        background-color: rgba(255, 255, 255, 0.6);
 
-                            &:before {
-                                border-left-color: #2b2f33;
-                            }
-                            &:after {
-                                border-right-color: #2b2f33;
-                            }
+                        &:before {
+                            border-left-color: #2b2f33;
+                        }
+                        &:after {
+                            border-right-color: #2b2f33;
                         }
                     }
                 }
